# Projet_7

./: .coverage  .dockerignore.txt  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_api.bat
.github/workflows/: ci_cd_pipeline.yaml  test.yml
api/: main_api.py
src/: __init__.py  chatbot.py  data_process.ipynb  load_new_data.py  rebuild_by_api.py
tests/: conftest.py  evaluate.py  evaluate_deepeval.py  evaluate_rag.py  test_chatbot.py  test_load_new_data.py  test_queries.json
